{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 29,
  "lineage": "52c6ec27-74d9-2e74-fdf3-59085be2f866",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bee4db0135ec91d3",
            "association_id": "eipassoc-0ef21174b54d843b6",
            "domain": "vpc",
            "id": "eipalloc-0bee4db0135ec91d3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ac4d5c5465bb3739",
            "private_dns": "ip-10-32-2-24.ec2.internal",
            "private_ip": "10.32.2.24",
            "public_dns": "ec2-3-227-79-120.compute-1.amazonaws.com",
            "public_ip": "3.227.79.120",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01543d0f017510ee5",
            "association_id": "eipassoc-0faa202174cee8b64",
            "domain": "vpc",
            "id": "eipalloc-01543d0f017510ee5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07ddac3861b9caa50",
            "private_dns": "ip-10-32-3-157.ec2.internal",
            "private_ip": "10.32.3.157",
            "public_dns": "ec2-54-198-30-186.compute-1.amazonaws.com",
            "public_ip": "54.198.30.186",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:internet-gateway/igw-021922d17a72a76f7",
            "id": "igw-021922d17a72a76f7",
            "owner_id": "798745097403",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798745097403:loadbalancer/app/node-lb/8a9654a1d78f530a",
            "arn_suffix": "app/node-lb/8a9654a1d78f530a",
            "desync_mitigation_mode": "defensive",
            "dns_name": "node-lb-1531260103.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:798745097403:loadbalancer/app/node-lb/8a9654a1d78f530a",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "node-lb",
            "security_groups": [
              "sg-047e1f7275a5f0a2e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-080d44619a40993c9"
              },
              {
                "subnet_id": "subnet-0fe4827ad6e8a1807"
              }
            ],
            "subnets": [
              "subnet-080d44619a40993c9",
              "subnet-0fe4827ad6e8a1807"
            ],
            "vpc_id": "vpc-0d7a2be05f35a28ad",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798745097403:listener/app/node-lb/8a9654a1d78f530a/9ea46513b1260bb2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:798745097403:targetgroup/node-target-group/2f91ae75bf7de226",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:798745097403:listener/app/node-lb/8a9654a1d78f530a/9ea46513b1260bb2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:798745097403:loadbalancer/app/node-lb/8a9654a1d78f530a",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.target_group",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:798745097403:targetgroup/node-target-group/2f91ae75bf7de226",
            "arn_suffix": "targetgroup/node-target-group/2f91ae75bf7de226",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:798745097403:targetgroup/node-target-group/2f91ae75bf7de226",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "node-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0bee4db0135ec91d3",
            "connectivity_type": "public",
            "id": "nat-042eeb7949c8b8959",
            "network_interface_id": "eni-0ac4d5c5465bb3739",
            "private_ip": "10.32.2.24",
            "public_ip": "3.227.79.120",
            "subnet_id": "subnet-0fe4827ad6e8a1807"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01543d0f017510ee5",
            "connectivity_type": "public",
            "id": "nat-0d58838353c9ea7ea",
            "network_interface_id": "eni-07ddac3861b9caa50",
            "private_ip": "10.32.3.157",
            "public_ip": "54.198.30.186",
            "subnet_id": "subnet-080d44619a40993c9"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-021922d17a72a76f7",
            "id": "r-rtb-0bc9ff6e586d1f8141080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0bc9ff6e586d1f814",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gateway",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:route-table/rtb-0f2868b8ab33efc44",
            "id": "rtb-0f2868b8ab33efc44",
            "owner_id": "798745097403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-042eeb7949c8b8959",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:route-table/rtb-00da38553a61c77f2",
            "id": "rtb-00da38553a61c77f2",
            "owner_id": "798745097403",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d58838353c9ea7ea",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03b9863b07536708e",
            "route_table_id": "rtb-0f2868b8ab33efc44",
            "subnet_id": "subnet-072b67349e097d4e7"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08c19924a07cd2589",
            "route_table_id": "rtb-00da38553a61c77f2",
            "subnet_id": "subnet-008fb0fbf0cc3f609"
          },
          "dependencies": [
            "aws_eip.gateway",
            "aws_internet_gateway.gateway",
            "aws_nat_gateway.gateway",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:security-group/sg-047e1f7275a5f0a2e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-047e1f7275a5f0a2e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "node-alb-security-group",
            "name_prefix": "",
            "owner_id": "798745097403",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:security-group/sg-02fa9ffdc07f322a6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02fa9ffdc07f322a6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-047e1f7275a5f0a2e"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "node_app_sg",
            "name_prefix": "",
            "owner_id": "798745097403",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:subnet/subnet-072b67349e097d4e7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-072b67349e097d4e7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798745097403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:subnet/subnet-008fb0fbf0cc3f609",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008fb0fbf0cc3f609",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "798745097403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:subnet/subnet-0fe4827ad6e8a1807",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fe4827ad6e8a1807",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798745097403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:subnet/subnet-080d44619a40993c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080d44619a40993c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "798745097403",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0d7a2be05f35a28ad"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:798745097403:vpc/vpc-0d7a2be05f35a28ad",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-02494d8daedff345b",
            "default_route_table_id": "rtb-0bc9ff6e586d1f814",
            "default_security_group_id": "sg-05ebb8db80b737f7a",
            "dhcp_options_id": "dopt-045c07fc73bc8a8ff",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d7a2be05f35a28ad",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bc9ff6e586d1f814",
            "owner_id": "798745097403"
          }
        }
      ]
    }
  ]
}